# api/openapi.yaml
@@ -526,9 +526,13 @@ components:
       additionalProperties: false
       properties:
         global:
-          $ref: "#/components/schemas/FXMarkupBody"
+          anyOf:
+            - $ref: "#/components/schemas/FXMarkupBody"
+            - type: "null"
         tenant:
-          $ref: "#/components/schemas/FXMarkupBody"
+          anyOf:
+            - $ref: "#/components/schemas/FXMarkupBody"
+            - type: "null"
       required:
         - global
         - tenant
